force-app/main/default/objects/Noncredit_Invoice_Payment_Transfer__e/Noncredit_Invoice_Payment_Transfer__e.object-meta.xml
<CustomObject>
    <description>Represents a transactional transfer between two invoices... should be called once for the credit side &amp; once for the debit side.</description>
    <label>Noncredit Invoice Payment Transfer</label>
    <pluralLabel>Noncredit Invoice Payment Transfers</pluralLabel>
</CustomObject>