force-app/main/default/objects/Noncredit_Invoice_Payment_Transfer__e/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>The amount to transfer in / out.</description>
    <label>Amount</label>
    <precision>14</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>