force-app/main/default/objects/Noncredit_Invoice_Payment_Transfer__e/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>The invoice to apply to.</description>
    <label>Invoice Number</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>