force-app/main/default/objects/Noncredit_Invoice_Payment_Transfer__e/fields/Is_Credit__c.field-meta.xml
<CustomField>
    <fullName>Is_Credit__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is the amount being added to the invoice (as a payment) or debited from the invoice?</description>
    <label>Is Credit</label>
    <type>Checkbox</type>
</CustomField>