force-app/main/default/objects/Noncredit_Invoice_Payment_Transfer__e/fields/Related_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Related_Invoice__c</fullName>
    <description>If a debit, the invoice we&apos;re crediting.</description>
    <label>Related Invoice</label>
    <length>32</length>
    <type>Text</type>
</CustomField>