force-app/main/default/objects/Noncredit_Invoice_Payment_Transfer__e/fields/Section_Reference__c.field-meta.xml
<CustomField>
    <fullName>Section_Reference__c</fullName>
    <description>The reference that the debit is paying for.</description>
    <label>Section Reference</label>
    <length>40</length>
    <type>Text</type>
</CustomField>