force-app/main/default/objects/Noncredit_Invoice_Payment_Transfer__e/fields/TransId__c.field-meta.xml
<CustomField>
    <fullName>TransId__c</fullName>
    <description>The incoming transaction id so we can determine its uniqueness.</description>
    <label>TransId</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>