force-app/main/default/objects/Noncredit_Invoice_Payment_Transfer__e/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <description>The user id of the entity crediting or debiting. Currently noncredit id from Opus.</description>
    <label>UserId</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>